[package]
name = "test-wrapper-code-gen"
version = "0.1.0"
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

[lib]
proc-macro=true
